--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                             <br>
                             <br>
                             <img src="img/portfolio/impact_noise.jpg" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>Be able to design specific solutions for different impact noise insulation requirements. Get noise reduction on 1/3 octaves bands.</p>
                             <br>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
