--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -262,7 +262,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Notify</h2>
-                    <h4> Notify me once your site launch </h4>
+                    <h4> Notify me once the site launch </h4>
                 </div>
             </div>
             <div class="row" style="background-color:#000000">
@@ -329,7 +329,7 @@
                             <br>
                             <br>
                             <img src="img/portfolio/impact_noise.jpg" class="img-responsive img-centered" alt="">
-                            <p>Be able to design specific solutions for different impact noise insulation requirements. Get noise reduction on 1/3 octaves bands.</p>
+                            <p>Be able to design specific solutions for different impact noise insulation requirements. Get noise reduction in 1/3 octave bands.</p>
                             <br>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
@@ -354,7 +354,7 @@
                           <br>
                           <br>
                           <img src="img/portfolio/acoustic_silencer.png" class="img-responsive img-centered" alt="">
-                          <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                          <p>Get the proper design of silencer based on the noise source, requisites and restrictions you have.</p>
                           <br>
                           <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                       </div>
@@ -379,7 +379,7 @@
                           <br>
                           <br>
                           <img src="img/portfolio/facade.jpg" class="img-responsive img-centered" alt="">
-                          <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                          <p>Take into account your wall and windows composition and size to get the noise reduction they offer together.</p>
                           <br>
                           <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                       </div>
@@ -404,7 +404,7 @@
                           <br>
                           <br>
                           <img src="img/portfolio/room.jpg" class="img-responsive img-centered" alt="">
-                          <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                          <p>Take into account direct and indirect noise paths from one room to the other as well as other aspects in order to get a proper knowledge about the airborne acoustic insulation you will get.</p>
                           <br>
                           <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                       </div>
@@ -429,7 +429,7 @@
                           <br>
                           <br>
                           <img src="img/portfolio/sound_propagation.png" class="img-responsive img-centered" alt="">
-                          <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                          <p>Get a knowledge about how much noise generated at point A you can expect to receive at point B in free field, in a comfortable way.</p>
                           <br>
                           <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                       </div>
@@ -454,7 +454,7 @@
                           <br>
                           <br>
                           <img src="img/portfolio/reverberation.jpg" class="img-responsive img-centered" alt="">
-                          <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                          <p>Get knowledge about how /p>
                           <br>
                           <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                       </div>
